Fixing alignment of header

--- a/app/styles/nav.styl
+++ b/app/styles/nav.styl
@@ -20,4 +20,5 @@
         margin: 0 auto
 
         &.floating
-            left: 9%
+            left: 50%
+            margin-left: -475px
